[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kujira"
version = "0.1.0"
description = "Live, editable analytics."
authors = [{name = "Abitpal Gyawali", email = "agyawali@utexas.edu"}]
dependencies = [
    "colorama>=0.4.4"
]


[tool.setuptools]
packages = ["kujira"]  # List of package directories
